<resources>
    <string name="app_name">BibliotecaRaul</string>
    <string name="borrar_categoira">BORRAR CATEGOIRA</string>
    <string name="mostrar_libros">MOSTRAR LIBROS</string>
    <string name="nueva_categoria">NUEVA CATEGORIA</string>
    <string name="nombre_categoria">Nombre Categoria</string>
    <string name="insertar_categoria">INSERTAR CATEGORIA</string>
    <string name="borrar_provincia">BORRAR PROVINCIA</string>
    <string name="borrar_categoria">BORRAR CATEGORIA</string>
    <string name="lista_libros">LISTA LIBROS</string>
    <string name="detalles_libros">Detalles Libros</string>
    <string name="nombre_libro">Nombre Libro</string>
    <string name="todo">TODO</string>
    <string name="categoria">categoria</string>
    <string name="descripcion">descripcion</string>
    <string name="actualizar_categoria">Actualizar Categoria</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="id_categoria">Id Categoria</string>
    <string name="idcategoria">idCategoria</string>
    <string name="item_provincia">item provincia</string>
    <string name="nuevo_libro">NUEVO LIBRO</string>
    <string name="nombre">Nombre</string>
    <string name="guardar_libro">GUARDAR LIBRO</string>
    <string name="descripcion_reload">descripcion_reload</string>
    <string name="descripcion_plus">descripcion_plus</string>
    <string name="id_categoria_libro">Id Categoria Libro</string>
</resources>