<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_libro"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/libros" />

    <LinearLayout
        android:layout_width="221dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_rv_nombreL"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_libro"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_rv_descripcion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/descripcion" />

        <TextView
            android:id="@+id/txt_rv_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria" />
    </LinearLayout>
</LinearLayout>